syntax = "proto3";
option go_package = "github.com/asynkron/protoactor-go/examples/cluster-metrics/shared";
package shared;

message Unit {}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message AddRequest {
  double a = 1;
  double b = 2;
}

message AddResponse {
  double result = 1;
}

service Hello {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc VoidFunc(AddRequest) returns (Unit) {}
}
